Fixed fullscreen z-index &  disabled

--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -71,6 +71,9 @@
   left: 0;
   bottom: 0;
   background: white;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 @media (min-width: 480px) {
   .Gallery {
